modules/gdscript/tests/scripts/parser/errors/variable_conflicts_variable.gd
func test():
	var TEST = 1
	var TEST = 2
